# DataReader

./: .gitignore  CMakeLists.txt  DataReader.LinkDef.h  DataReader.cxx  DataReader.h  DataReaderEvent.cxx  DataReaderEvent.h  DataReaderMain.cxx  DataReaderPlotter.cxx  DataReaderPlotter.h  ListOfPDG.h
Converters/: CMakeLists.txt  DRBase.cxx  DRBase.h  DRurqmd.cxx  DRurqmd.h
Event/: DataReaderEvent.cxx
Plotter/: CMakeLists.txt
src/: CMakeLists.txt  CentralityManagerMain.cpp  DataReader.LinkDef.h  DataReader.cxx  DataReader.h  DataReaderMain.cxx
src/CentralityManager/: CMakeLists.txt  CentralityManager.LinkDef.h  CentralityManager.cxx  CentralityManager.h
src/Converters/: CMakeLists.txt  Converters.LinkDef.h  DRBase.cxx  DRBase.h  DRManager.cxx  DRManager.h  DRlaqgsm.cxx  DRlaqgsm.h  DRphsd.cxx  DRphsd.h  DRunigen.cxx  DRunigen.h  DRurqmd.cxx  DRurqmd.h  DRvsdt.cxx  DRvsdt.h
src/EPManager/: CMakeLists.txt  DRQvCalc.cxx  DRQvCalc.h  DRQvector.cxx  DRQvector.h  DRResCalc.cxx  DRResCalc.h  EPManager.LinkDef.h
src/Event/: CMakeLists.txt  DataReaderEvent.h  Event.LinkDef.h
src/Plotter/: CMakeLists.txt  DataReaderPlotter.cxx  DataReaderPlotter.h  Plotter.LinkDef.h
